2019-12-25 Wiley E. Hill <wileyhill@gmail.com>

    * src/x/x_dialog.c: Deactivate undeveloped x_dialog_sym_not_embedded.

2019-08-06 Wiley E. Hill <wileyhill@gmail.com

    * etc/system-gschemrc.scm: Remove the stroke zoom in and out patterns;
      user are expected to have a scroll-wheel to perform these actions.
      Remove the "123789258" pattern for Insert component and change to
      "852" or "258".

    * src/x/x_grid.c: Remove DOTS_POINTS_ARRAY_SIZE macro, and reformat
      documentation.

2019-08-05 Wiley E. Hill <wileyhill@gmail.com

    * include/gschem_toplevel.h: Remove unneeded member background_color.

    * include/i_vars.h: Remove unused default_background_color.

    * src/iface/i_vars.c: Removed some unused default color variables:

        * default_attribute_color
        * default_detachattr_color
        * default_junction_color
        * default_net_endpoint_color

    * src/x/x_grid.c: Revise x_grid_repaint_background to use BACKGROUND_COLOR
      index instead of referencing w_current->background_color. See commit
      to master branch a003d3f1207c2cf.

2019-07-27 Wiley E. Hill <wileyhill@gmail.com

    * po/ru.po: Update Russian translations.
    * po/sl.po: Update Slovenian translations
    * po/sr.po: Update Serbian translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2019-07-26 Wiley E. Hill <wileyhill@gmail.com

    * include/prototype.h: Update declaration, remove declarationa for
      extinct i_callback_buffer_xxx functions.

    * src/iface/i_callbacks.c: Remove function i_callback_close_wm.

    * src/iface/i_event.c: Relocate function i_callback_close_wm and
      rename to i_event_close_wm and swap order of arguments.

    * src/x/x_window.c: Replace g_signal_connect with g_signal_connect_
      swapped to connect the "delete_event" signal.

2019-07-25 Wiley E. Hill <wileyhill@gmail.com

    * include/gschem_bin.h: Remove file.
